# CNN-Based-Semiconductor-Wafer-Defect-Detection-Using-the-WM-811K-Dataset

./: .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  DEFENSE_SUBMISSION.md  Dockerfile  FEDERATED_LEARNING.md  FINAL_STATUS_REPORT.md  Grad_CAM213.py  IMPLEMENTATION_17_COMPLETE.md  IMPROVEMENTS_STATUS.md  LICENSE  Makefile  README.md  REPORT.md  REPORT.tex  SESSION_2_SUMMARY.md  SESSION_COMPLETION_SUMMARY.md  SUBMISSION_FINALIZER.md  SUBMISSION_STATUS.md  SUGGESTED_IMPROVEMENTS.md  TEAM_README.md  TODO_BRANDON.md  UNCERTAINTY_QUICKSTART.md  active_learn.py  best_baseline_cnn.pt  compress_model.py  config.yaml  cross_validate.py  dashboard.py  distributed_train.py  docker-compose.yml  environment.yml  finalize_phd_submission.py  inference_server.py  (+17 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
SUBMISSION_FINAL/: DEFENSE_SUBMISSION.md  MANIFEST.json  Makefile  README.md  VALIDATION_SUMMARY.md  pytest.ini  requirements.txt
checkpoints/: best_cnn.sha256
configs/: base.yaml  colab_fast.yaml  cost_sensitive.yaml  federated.yaml  inference.yaml  train.yaml
data/: README.md
docs/: COLAB_SETUP.md  DATA_CARD.md  DEFENSE_PACKET.md  Deep Learning Project Proposal.md  FILES_CREATED_IMPROVEMENT_17.txt  FINAL_STATUS_REPORT.md  GPU_AND_RUN_GUIDE.md  IMPLEMENTATION_SUMMARY_15.md  IMPROVEMENTS.md  IMPROVEMENTS_PHASE_2_REPORT.md  IMPROVEMENTS_STATUS.md  IMPROVEMENT_18_IMPLEMENTATION_REPORT.md  MODEL_CARD.md  Project Proposal - Sample.docx  Project Proposal - Template-2.docx  Project.md  RELATED_WORK.md  REPRODUCE_METRICS.md  UNCERTAINTY_QUANTIFICATION.md  colab_quickstart.ipynb  kaggle_quickstart.ipynb  old_wafer_defect_detection.ipynb  presentation.tex  run_20260414_analysis.md  run_20260414_postmortem.tex  test_load.py  wafer_defect_detection_report.aux  wafer_defect_detection_report.docx  wafer_defect_detection_report.out  wafer_defect_detection_report.tex  wafer_defect_detection_run.ipynb
models/: label_encoder.pkl
references/: PAPER_LIST.md  README.md  Refrence_list.xlsx  S0957417423010461.txt
results/: README.md  metrics.json
scripts/: __init__.py  active_learn.py  anomaly_analysis.py  (+52 more)
(+717 files in other folders)
